<?xml version="1.0"?>
<package format="3">
<name>vision_localization</name>
<version>0.1.0</version>
<description>Feature-based visual localization stack (SuperPoint+SuperGlue-ready) and integration nodes for Jetson Nano / ROS 2.</description>
<maintainer email="you@example.com">Your Name</maintainer>
<license>Apache-2.0</license>
<buildtool_depend>ament_cmake</buildtool_depend>
<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>nav_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>image_transport</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>builtin_interfaces</exec_depend>
<test_depend>pytest</test_depend>
<export>
<build_type>ament_python</build_type>
</export>
</package>